--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,12 +27,13 @@ jobs:
       - name: Deploy to S3
         uses: jakejarvis/s3-sync-action@v0.5.1
         with:
-          bucket: ashkinfino-portfolio-site
-          region: ap-south-1
-          source-dir: build
+          args: --acl public-read --delete
         env:
+          AWS_S3_BUCKET: ashkinfino-portfolio-site
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ap-south-1
+          SOURCE_DIR: dist
 
       - name: Invalidate CloudFront cache
         uses: chetan/invalidate-cloudfront-action@v2
